2004-09-06 08:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Temporary fix for crash.   Corrects a 
	problem with document deallocation, until I can find a more
	permanent solution.

2004-09-06 08:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added missing NSImageCell class
	description.
	* Palettes/3Containers/inspectors.m: Corrected issue with
	getting the class name of the data cell in
	[GormTableColumnAttributesInspector _getCellClassName].
	
2004-09-06 08:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Reformatted to canonical plist.
	Suggested by Deek/Jeff.
	* Palettes/3Containers/GormNSTableColumnInspector.gorm: 
	Added title and made the table draw the grid.
	
2004-09-05 12:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/inspectors.m: Added _getCellClassName 
	to GormTableColumnAttribitesInspector to get the cell class
	for the inspector.  Also modified _getValuesFromObject: to
	call the method and display the cell class name in the table.
	Modified setValuesFromControl to add the object to the 
	document and assign the correct custom class.
	
2004-09-05 10:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormNSTableColumnInspector.gorm: 
	Made changes to allow user to edit the tableColumn dataCell.
	* Palettes/3Containers/inspectors.m: Added code 
	for the delegate and datasource of the table added to the
	inspector.   Also modified methods _getValuesFromObject and
	_setValuesFromControl: in GormTableColumnInspector to 
	accommodate changing the dataCell and redisplaying the 
	tableView which the column belongs to.
	
2004-08-28 16:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCustomView.m: Modified _bestPossibleSuperClass to 
	return NSView if the class isn't defined or is not an
	NSView subclass.
	
2004-08-28 11:00 Gregory John Casamento <greg_casamento@yahoo.com>
